--- a/templates/show.html
+++ b/templates/show.html
@@ -1,6 +1,33 @@
 <head> 
     <title>Spot App</title>
-    <style src='show-style.css'></style>
+    <style src='show-style.css'>body {
+        display: flex;
+        justify-content: left;
+        align-items: center;
+        height: 50vh;
+        margin: 0;
+    }
+    .content-box {
+        border: 5px solid #ff0000; /* Border style */
+        padding: 20px; /* Padding around the content */
+        border-radius: 10px; /* Optional: Rounded corners */
+    }
+
+    #drag {
+        position: absolute;
+        z-index: 9;
+        background-color: #f1f1f1;
+        border: 1px solid #d3d3d3;
+        text-align: center;
+    }   
+    #dragheader {
+        padding: 10px;
+        cursor: move;
+        z-index: 10;
+        background-color: #2196F3;
+        color: #fff;
+    }
+</style>
 </head>
 <body>
     <div class="content-box">
@@ -64,9 +91,11 @@
 
     <div class="newReleases">
         <h1> New Releases </h1>
-        <h2>{{ newReleaseArtist }}</h2>
-        <h2> {{ newReleaseAlbum }}</h2>
-        <img src = "{{ newReleaseURL }}" alt = "album image">
+        <div class="release1">
+            <h4>{{ newReleaseArtist }}</h4>
+            <h4> {{ newReleaseAlbum }}</h4>
+            <img src = "{{ newReleaseURL }}" alt = "album image" width="100" height="100">
+        </div>
     </div>
 
 </body>
